--- a/templates/ind.html
+++ b/templates/ind.html
@@ -276,7 +276,7 @@
         "UGC Reels": [
           {
             name: "Rowdy1",
-            path: "/static/media/Project_Videos/UGC_Reels/Rwdy.mp4",
+            path: "\static\media\Project_Videos\UGC_Reels/Rwdy.mp4",
             type: "video",
           },
           {
@@ -379,3 +379,4 @@
     </script>
   </body>
 </html>
+
